--- a/gh-pages/Gemfile
+++ b/gh-pages/Gemfile
@@ -1,5 +1,5 @@
-# source 'https://rubygems.org'
-source 'https://ruby.taobao.org'
+source 'https://rubygems.org'
+# source 'https://ruby.taobao.org'
 
 # Middleman Gems
 gem 'middleman', '>= 4.0.0'
