--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "github-comment-express",
+  "name": "github-comment",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "engines": {
+    "node": "5.3.0"
+  },
+  "devDependencies": {
     "body-parser": "~1.13.2",
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
