--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,8 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "susy": "^2.2.9"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
   }
 }
