--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "webpack-demos",
+  "name": "github-comment-client",
   "version": "1.0.0",
-  "description": "a collection of simple demos of Webpack",
-  "main": "index.js",
+  "description": "the client app for github-comment",
+  "main": "main.jsx",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "~6.3.26",
-    "babel-loader": "~6.2.0",
+    "babel-loader": "~6.2.1",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
     "bundle-loader": "^0.5.4",
@@ -14,9 +14,8 @@
     "file-loader": "~0.8.5",
     "history": "~1.17.0",
     "html-webpack-plugin": "~1.7.0",
-    "jquery": "~2.1.4",
     "jsx-loader": "~0.13.2",
-    "open-browser-webpack-plugin": "0.0.1",
+    "open-browser-webpack-plugin": "0.0.2",
     "react": "~0.14.3",
     "react-dom": "~0.14.3",
     "react-router": "~1.0.3",
@@ -29,6 +28,7 @@
     "susy": "^2.2.9"
   },
   "dependencies": {
+    "babel-runtime": "^6.3.19",
     "jquery": "^2.1.4"
   }
 }
