--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "github-comment",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "5.3.0"
+    "node": "5.4.0"
   },
   "devDependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "~1.14.2",
     "client-sessions": "^0.7.0",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "~1.4.0",
+    "cz-conventional-changelog": "^1.1.5",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "ejs": "~2.3.4",
@@ -16,5 +17,10 @@
     "morgan": "~1.6.1",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
