--- a/client/package.json
+++ b/client/package.json
@@ -15,20 +15,23 @@
     "history": "~1.17.0",
     "html-webpack-plugin": "~1.7.0",
     "jsx-loader": "~0.13.2",
+    "node-sass": "^3.4.2",
     "open-browser-webpack-plugin": "0.0.2",
     "react": "~0.14.3",
     "react-dom": "~0.14.3",
     "react-router": "~1.0.3",
+    "redux-devtools": "^3.0.1",
+    "sass-loader": "^3.1.2",
     "style-loader": "~0.13.0",
+    "susy": "^2.2.9",
     "url-loader": "~0.5.7",
     "webpack": "~1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "susy": "^2.2.9"
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "babel-runtime": "^6.3.19",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5"
   }
 }
