--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-language: ruby
-rvm:
-- 2.3.0
+language: node_js
+node_js:
+  - "5.5"
 script:
 - rm -rf .git
 - git config --global user.email "mlc880926@gmail.com"
 - git config --global user.name "Ma Lucheng"
 - git config --global push.default simple
-- cd gh-pages && bundle install && bundle exec middleman build && cd build && git init .
+- cd gh-pages && npm install -g babel-node && npm install && npm run build && cd build && git init .
 - git remote add upstream "https://$GH_TOKEN@github.com/teddy-ma/github-comment.git" && git fetch upstream
 - git reset upstream/gh-pages && git add -A . && git commit -am "update from travis" && git push -q upstream HEAD:gh-pages -f
 - echo 'gh pages updated'
