--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -17,9 +17,10 @@
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-rootpath": "^0.1.4",
     "metalsmith-sass": "^1.3.0",
-    "metalsmith-watch": "^1.0.1",
     "metalsmith-serve": "^0.0.6",
+    "metalsmith-watch": "^1.0.1",
     "tinyliquid": "^0.2.30"
   },
   "devDependencies": {
