--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -17,7 +17,7 @@
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
-    "metalsmith-rootpath": "^0.1.4",
+    "metalsmith-prefix": "^1.0.3",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "^0.0.6",
     "metalsmith-watch": "^1.0.1",
