--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "metalsmith": "^2.1.0",
+    "metalsmith-build-date": "^0.2.0",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-html-minifier": "^1.1.0",
     "metalsmith-in-place": "^1.3.2",
