--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -17,6 +17,7 @@
     "metalsmith-in-place": "^1.3.2",
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-prism": "^2.1.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-prefix": "^1.0.3",
     "metalsmith-sass": "^1.3.0",
