--- a/client/package.json
+++ b/client/package.json
@@ -1,37 +1,58 @@
 {
   "name": "github-comment-client",
-  "version": "1.0.0",
-  "description": "the client app for github-comment",
-  "main": "main.jsx",
+  "version": "2.0.0",
+  "description": "GitHub Comment client",
+  "main": "index.js",
+  "scripts": {
+    "start": "babel-node index.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/setup.js 'test/**/*.@(js|jsx)'",
+    "test:watch": "npm run test -- --watch --watch-extensions jsx"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/teddy-ma/github-comment.git"
+  },
+  "keywords": [
+    "github",
+    "comment"
+  ],
+  "author": "teddy-ma",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/teddy-ma/github-comment/issues"
+  },
+  "homepage": "https://www.songofcode.com/github-comment/",
   "devDependencies": {
-    "babel-core": "~6.3.26",
-    "babel-loader": "~6.2.1",
-    "babel-preset-es2015": "~6.3.13",
-    "babel-preset-react": "~6.3.13",
-    "bundle-loader": "^0.5.4",
-    "css-loader": "~0.23.1",
-    "file-loader": "~0.8.5",
-    "history": "~1.17.0",
-    "html-webpack-plugin": "~1.7.0",
-    "jsx-loader": "~0.13.2",
-    "node-sass": "^3.4.2",
-    "open-browser-webpack-plugin": "0.0.2",
-    "react": "~0.14.3",
-    "react-dom": "~0.14.3",
-    "react-router": "~1.0.3",
-    "redux-devtools": "^3.0.1",
-    "sass-loader": "^3.1.2",
-    "style-loader": "~0.13.0",
-    "susy": "^2.2.9",
-    "url-loader": "~0.5.7",
-    "webpack": "~1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.5.3",
+    "css-loader": "^0.23.1",
+    "jsdom": "^9.3.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
-    "babel-runtime": "^6.3.19",
-    "jquery": "^2.1.4",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5"
+    "classnames": "^2.2.3",
+    "immutable": "^3.7.6",
+    "jquery": "^3.0.0",
+    "react": "^15.1.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
+    "socket.io": "^1.4.8"
   }
 }
