--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node_modules/webpack/bin/webpack.js",
     "dev": "node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/setup.js 'test/**/*.@(js|jsx)'",
+    "test": "node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch --watch-extensions jsx"
   },
   "repository": {
@@ -29,7 +29,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
-    "chai-immutable": "^1.5.3",
+    "chai-immutable": "^1.6.0",
     "css-loader": "^0.23.1",
     "jsdom": "^9.3.0",
     "mocha": "^2.4.5",
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "immutable": "^3.7.6",
+    "immutable": "^3.8.1",
     "jquery": "^3.0.0",
     "react": "^15.1.0",
     "react-addons-pure-render-mixin": "^15.1.0",
