--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,9 @@
-
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "/github-comment" # the subpath of your site, e.g. /blog
 url: "https://www.songofcode.com/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.songofcode.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
-# Build settings
-markdown: kramdown
+kramdown:
+  input: GFM
 
 exclude:
   - Gemfile
