--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.4.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -30,7 +31,6 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "styled-components": "^1.4.4",
-    "webpack-dev-server": "^1.16.2"
+    "styled-components": "^1.4.4"
   }
 }
