--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-github-comment-client",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-beta",
   "main": "index.js",
   "repository": "",
   "author": "",
