--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.2",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.4"
   }
 }
