--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.14.2",
-    "express-session": "^1.13.0",
     "cookie-parser": "~1.4.0",
     "cz-conventional-changelog": "^1.1.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "~2.3.4",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "morgan": "~1.6.1",
+    "nodejs-base64-encode": "0.0.2",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
   },
