--- a/github-comment/package.json
+++ b/github-comment/package.json
@@ -8,10 +8,10 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
-    "rebass": "^1.0.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
