--- a/github-comment/package.json
+++ b/github-comment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-comment",
-  "version": "0.1.0",
+  "version": "3.0.0-beta1",
   "private": true,
   "dependencies": {
     "json-server": "^0.12.0",
