--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,24 @@
 {
   "name": "github-comment",
-  "version": "3.0.0-beta1",
+  "version": "3.0.0-beta2",
   "private": true,
   "dependencies": {
-    "json-server": "^0.12.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.7",
+    "mini-css-extract-plugin": "^0.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1",
+
+    "json-server": "^0.12.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
