--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,18 @@
     "node": "6.2.2"
   },
   "dependencies": {
-    "body-parser": "~1.14.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.0",
     "cz-conventional-changelog": "^1.1.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "~2.5.4",
-    "express": "~4.13.1",
+    "express": "^4.16.4",
     "express-session": "^1.13.0",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.1",
     "nodejs-base64-encode": "0.0.2",
-    "request": "^2.67.0",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0"
   },
   "config": {
     "commitizen": {
