--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,26 @@
 {
   "name": "github-comment",
-  "version": "3.0.0-beta2",
+  "version": "4.0.0",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.7",
-    "mini-css-extract-plugin": "^0.2.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
-
-    "json-server": "^0.12.2",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.0.14",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.0"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-scripts": "2.1.3",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
