--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "styled-components": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=chromium react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
