--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,19 @@
   "version": "4.0.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^2.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "uglifyjs-webpack-plugin": "^2.1.1"
   },
   "scripts": {
     "start": "BROWSER=chromium react-scripts start",
-    "build": "react-scripts build",
+    "build:react": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:bundle": "webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-cli": "^3.2.3"
+  }
 }
