--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.2",
+    "react-content-loader": "4.0.0",
     "uglifyjs-webpack-plugin": "^2.1.1"
   },
   "scripts": {
