--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - "11.9.0"
 script:
   - npm i -g yarn
-  - npm install -g webpack-cli
+  - npm i -g webpack-cli
   - cd client && yarn && yarn build:react && yarn build:bundle
